[package]
name = "mitt-spel"
version = "0.1.0"
edition = "2024"

[dependencies]
macroquad = "0.4.15"
macroquad-particles = "0.2.2"



[patch.crates-io]
macroquad = { git = "https://github.com/not-fl3/macroquad" }
macroquad-particles = { git = "https://github.com/not-fl3/macroquad" }


[profile.dev.package.'*']
opt-level = 3
